<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>JenkinsCucumber</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!-- Selenium -->
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.33.0</version>
        </dependency>

        <!-- Cucumber Java -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>7.14.0</version>
        </dependency>

        <!-- Cucumber JUnit -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>7.14.0</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
<!--            &lt;!&ndash; Surefire plugin used to run tests in parallel &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.1.2</version>-->
<!--                <configuration>-->
<!--                    &lt;!&ndash;                    <parallel>methods</parallel>&ndash;&gt;-->
<!--                    &lt;!&ndash;                    <forkMode>perthread</forkMode>&ndash;&gt;-->
<!--                    &lt;!&ndash;                    <threadCount>3</threadCount>&ndash;&gt;-->
<!--                    <reuseForks>false</reuseForks>-->
<!--&lt;!&ndash;                    <argLine>-Duser.language=en</argLine>&ndash;&gt;-->
<!--&lt;!&ndash;                    <argLine>-Xmx1024m</argLine>&ndash;&gt;-->
<!--&lt;!&ndash;                    <argLine>-XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
<!--&lt;!&ndash;                    <argLine>-Dfile.encoding=UTF-8</argLine>&ndash;&gt;-->
<!--                    <argLine>-Xmx1024m -Dfile.encoding=UTF-8</argLine>-->
<!--                    <useFile>false</useFile>-->
<!--                    <includes>-->
<!--                        <include>**/TestRunner*.class</include>-->
<!--                    </includes>-->
<!--                    <testFailureIgnore>true</testFailureIgnore>-->
<!--                </configuration>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
<!--                    <parallel>classes</parallel> &lt;!&ndash; class düzeyinde paralellik &ndash;&gt;-->
<!--                    <threadCount>4</threadCount> &lt;!&ndash; Aynı anda kaç test class'ı çalışsın &ndash;&gt;-->
                    <reuseForks>false</reuseForks>
                    <argLine>-Xmx1024m -Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <includes>
                        <include>**/TestRunner*.class</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>